# gamejam-01-2022

./: Cargo.toml  index.html
.github/workflows/: ci.yml  release.yaml
credits/: CREDITS.md
data/scenes/: home.rog  interactables.ron
src/: actions.rs  audio.rs  lib.rs  main.rs  menu.rs  player.rs  plugins.rs  world.rs
src/plugins/: actions.rs  audio.rs  camera.rs  interactables.rs  loading.rs  menu.rs  player.rs  world.rs
src/plugins/interactables/: desk.rs  plant.rs
