[package]
name = "bevy_game" # ToDo
version = "0.1.0"
publish = false
authors = ["Matthew Bakhtiari <dev@mtbk.me", "Elijah <bruisedsalads@gmail.com>"]
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
default = [
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/x11",
    "bevy/wayland",
    "bevy_kira_audio/ogg"
]

dev = [
    "bevy/dynamic",
]

[dependencies]
bevy = { version = "0.6", default-features = false }
bevy_kira_audio = "0.8"
bevy_asset_loader = "0.8"
bevy_rapier2d = "0.12.0"
rand = "0.8"
bevy-inspector-egui = "0.7.4"

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.26", features=["x11", "wayland"]}

[build-dependencies]
embed-resource = "1.4"
